--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    if (project.android.hasProperty("namespace")) {
+        namespace 'me.aljan.telpo_flutter_sdk'
+    }
+
     compileSdkVersion 31
 
     compileOptions {
